# anchors

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  anchor.cpp  anchor.h  anchor_8h_source.html  anchorbase.h  anchorbase_8h_source.html  anchorutil.cpp  anchorutil_8h_source.html  annotated.html  annotated_dup.js  classanchors_1_1Anchor-members.html  classanchors_1_1Anchor.html  classanchors_1_1Anchor.js  classanchors_1_1AnchorWrap-members.html  classanchors_1_1AnchorWrap.html  classanchors_1_1AnchorWrap__inherit__graph.map  classanchors_1_1Anchor__coll__graph.md5  classanchors_1_1Anchors-members.html  classanchors_1_1Anchors.html  classanchors_1_1Engine-members.html  classanchors_1_1Engine.html  classes.html  design.md  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  engine.cpp  engine.h  engine_8h_source.html  files.html  functions.html  functions_func.html  functions_type.html  graph_legend.html  hierarchy.html  (+13 more)
.github/workflows/: main.yml  ubuntu.yml
api/: classanchors_1_1AnchorWrap__inherit__graph.md5  classanchors_1_1Engine.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen-awesome-paragraph-link.js  graph_legend.html  index.html  inherit_graph_0.map  inherit_graph_2.md5
api/search/: functions_4.js  functions_7.js
docs/: CMakeLists.txt  Doxyfile.in  conf.py  header.html  index.rst
docs/api/: annotated_dup.js  classanchors_1_1Anchor-members.html  classanchors_1_1AnchorWrap-members.html  classanchors_1_1AnchorWrap.html  classanchors_1_1Anchor__coll__graph.map  classanchors_1_1Anchors-members.html  classanchors_1_1Anchors.html  classanchors_1_1Engine-members.html  classanchors_1_1Engine.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen-awesome-darkmode-toggle.js  engine_8h_source.html  files.html  functions.html  functions_func.html  functions_type.html  hierarchy.html  menudata.js  navtreedata.js  navtreeindex0.js
docs/api/search/: all_0.js  all_2.js  all_3.js  all_7.js  functions_0.js  functions_1.js  functions_3.js  functions_5.js  pages_0.js  typedefs_0.js
docs/html/: anchor_8h_source.html  anchorbase_8h_source.html  anchorutil_8h_source.html  classanchors_1_1Anchor.js  classanchors_1_1AnchorWrap__inherit__graph.map  doxygen-awesome.css  inherit_graph_1.map  inherit_graph_1.md5  inherits.html
docs/html/search/: all_4.js  all_8.js  classes_0.js  functions_6.js  searchdata.js  typedefs_1.js
html/: annotated.html  classanchors_1_1Anchor.html  inherit_graph_0.md5
html/search/: all_1.js  all_5.js  all_6.js  classes_1.js  functions_2.js
include/: anchor.h  anchorutil.h  engine.h
search/: all_0.js  all_1.js  all_5.js  all_6.js  all_7.js  classes_1.js  functions_0.js  functions_2.js  functions_3.js  namespaces_0.js  searchdata.js  typedefs_0.js  typedefs_2.js
src/: CMakeLists.txt  anchor.cpp  anchor.h  anchorbase.h  anchorutil.cpp  anchorutil.h  engine.cpp  engine.h  main.cpp
test/: CMakeLists.txt  engine.i.t.cpp
